Fixed .htaccess rewrites
